sim_errors.txt
    Checking bdh_model v0.1.0 (C:\repo\BRAIN_REPOS\BDH)
error[E0283]: type annotations needed
   --> src\bin\central_sim.rs:385:29
    |
385 |     let social_vec_tensor = generate_concept_prototype("social connect bond group", &embedder, &device);
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `B` declared on the function `generate_concept_prototype`
    |
    = note: cannot satisfy `_: burn::prelude::Backend`
    = help: the following types implement trait `burn::prelude::Backend`:
              Autodiff<B, C>
              JitBackend<R, F, I>
              burn_fusion::backend::Fusion<B>
note: required by a bound in `generate_concept_prototype`
   --> src\bin\central_sim.rs:32:34
    |
 32 | fn generate_concept_prototype<B: Backend>(text: &str, embedder: &bdh_model::data::Embedder, device: &B::Device) -> Tensor<B, 1> {
    |                                  ^^^^^^^ required by this bound in `generate_concept_prototype`
help: consider specifying the generic argument
    |
385 |     let social_vec_tensor = generate_concept_prototype::<B>("social connect bond group", &embedder, &device);
    |                                                       +++++

For more information about this error, try `rustc --explain E0283`.
error: could not compile `bdh_model` (bin "central_sim") due to 1 previous error
